--- a/style.css
+++ b/style.css
@@ -1,127 +1,68 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins: 200,300, 400, 500, 600, 700, 800, 900&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+
+*{
+    font-size: 100%;
+    background-color: black;
 }
 
-body {
-  background: #000000;
+.home-infos{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 25px;
 }
 
-section {
-  position: relative;
-  width: 100%;
-  min-height: 100vh;
-  padding: 100px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.home-infos__esquerda{
+    margin-left: 50px;
 }
 
-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 20px 100px;
-  display: flex;
-  justify-content: space-between;
-  align-content: center;
-}
-ul {
-  color: black;
-  display: inline;
+.home-infos__direita{
+    margin-right: 50px;
+    display: flex;
+    gap: 30px;
 }
 
-header .logo {
-  position: relative;
-  max-width: 80px;
+.home-infos__item{
+    color: white;
+    text-decoration: none;
+    font-size: 1.3rem;
 }
 
-h2 {
-  color: white;
+.home-infos__item:hover{
+    color: orange;
+    transform: scale(1.2);
+    transition: 0.5s;
 }
 
-p {
-  color: white;
+.home-conteudo{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-header ul {
-  position: relative;
-  display: flex;
-}
-header ul li {
-  list-style: none;
-}
-
-header ul li a {
-  display: inline-block;
-  color: #333;
-  font-weight: 400;
-  margin-left: 40px;
-  text-decoration: none;
+.home-conteudo__texto{
+    display: flex;
+    flex-flow: column wrap;
+    color: white;
+    text-align: center;
+    margin-left: 250px;
 }
 
-div a {
-  display: inline-block;
-  color: #333;
-  font-weight: 400;
-  margin-left: 40px;
-  text-decoration: none;
+.home-conteudo__texto-titulo{
+    font-size: 3rem;
 }
 
-.content {
-  position: relative;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.home-conteudo__texto-titulo strong{
+    color:rgb(248, 193, 42);
+    font-size: 5.2rem;
 }
 
-.content .textBox {
-  position: relative;
-  max-width: 600px;
+.home-conteudo__texto-descricao{
+    font-size: 2rem;
+    max-width: 800px;
 }
 
-.content .textBox h2 {
-  color: white;
-  font-size: 4em;
-  line-height: 1.4em;
-  font-weight: 500;
-}
-
-.content .textBox h2 span {
-  color: orange;
-  font-size: 1.2em;
-  font-weight: 900;
-}
-
-.content .textBox p {
-  color: white;
-}
-
-.content .textBox a {
-  display: inline-block;
-  margin-top: 20px;
-  padding: 8px 20px;
-  background: orange;
-  color: black;
-  border-radius: 40px;
-  font-weight: 500;
-  letter-spacing: 1px;
-  text-decoration: none;
-}
-
-.content .imgBox {
-  width: 600px;
-  display: flex;
-  justify-content: flex-start;
-  padding-right: 50px;
-  margin-top: 50px;
-}
-
-.content .imgBox img {
-  max-width: 340px;
+.home-conteudo__imagem{
+    margin-top: 50px;
+    transform: scale(0.8);
 }
